HtmlUtils: final + typo + java code style + RIConstant + code simplification
Signed-off-by: pizzi80 <paolo@given2.com>